--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div class="main_container">
             <div class="content_one" id="about">
                 <h2>ABOUT</h2>
-                <p>I am a software developer currently based in Brighton UK, passionate about exploring and transforming creative ideas into reality with technologies such as Python, SQL, Javascript, HTML, CSS, React and PyQt.</p>
-                <p>I have experience writing Python scripts and SQL queries for manipulation and extraction on large datasets for data visual presentation.</p>
+                <p>I am a software developer currently based in Brighton UK, passionate about exploring and transforming creative ideas into reality with technologies such as Python, SQL, Javascript, HTML and CSS.</p>
+                <p>I have experience writing Python scripts and SQL queries for manipulation and extraction on large datasets for data visual presentation and data analysing.</p>
                 <p>With an ability to problem solve, I also have experience building custom solutions to increase productivity for day to day business operations, from automating daily report updates to updating over hundred thousand customer accounts with new features.</p> 
             </div> <!-- Content Container-->
 
@@ -260,7 +260,7 @@
             <div class="contact_content" id="contact">
                 <h2>CONTACT</h2>
                 <p>If you have any enquiries or require any further information, feel free to contact me.</p>
-                <form action="https://formspree.io/xgendano" method="POST">
+                <form action="https://formspree.io/karlduggan_55@hotmail.com" method="POST">
 
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name" >
@@ -268,10 +268,9 @@
                     <label for="email">Email</label>
                     <input type="text" id="email" name="_replyto" >
 
-                    <label for="subject">Subject</label>
                     <textarea name="message" id="subject" cols="30" rows="8"></textarea>
                     
-                    <button id="send-btn" type="send" value="Send">Send</button>
+                    <button id="send-btn" type="submit" value="Send">Send</button>
                 </form>
             </div>
 
